feat:vue as compile and watcher

--- a/notes/code/04-minivue/index.html
+++ b/notes/code/04-minivue/index.html
@@ -15,6 +15,9 @@
       <input type="text" v-model="count" />
     </div>
 
+    <script src="./js/dep.js"></script>
+    <script src="./js/watcher.js"></script>
+    <script src="./js/compiler.js"></script>
     <script src="./js/observer.js"></script>
     <script src="./js/vue.js"></script>
     <script>
@@ -29,7 +32,7 @@
         }
       }
     })
-    console.log(vm)
+    // console.log(vm)
     console.log(vm.msg)
     </script>
   </body>
