--- a/code/04-minivue/index.html
+++ b/code/04-minivue/index.html
@@ -31,19 +31,12 @@
       data: {
         msg: 'Hello Vue',
         count: 100,
-        html: '<p style="color: skyblue">这是一个p标签</p>',
-        user: {
-          name: 'zyh',
-          age: 20
-        }
+        html: '<p style="color: skyblue">这是一个p标签</p>'
       },
       methods: {
         clickHandler() {
           console.log('点击事件')
           alert('点击了')
-        },
-        changeHandler() {
-          console.log('改变')
         },
         mouseOver(){
           alert('鼠标进入')
